--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,13 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
+          python3 -m pip install pre-commit
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
-      - name: Install pre-commit
-        run: pip install pre-commit
+      - name: Get some details
+        run: |
+          which python3
+          python3 --version
+          python3 -m pip list
       - name: Run pre-commit
         run: pre-commit run --all-files
